[project]
name = "agent-browser-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "ase>=3.26.0",
    "cclib>=1.8.1",
    "fastapi>=0.116.2",
    "geometric>=1.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "mdtraj>=1.11.0",
    "motor>=3.7.1",
    "nglview>=4.0",
    "numpy>=2.2.6",
    "openai>=1.0.0",
    "openai-agents>=0.3.2",
    "openmm>=8.4.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyberny>=0.3.3",
    "pydantic-settings>=2.10.1",
    "pymatgen>=2025.10.7",
    "pyscf>=2.11.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.20",
    "rdkit>=2025.9.1",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
